--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -6,11 +6,11 @@
   <body>
     <h1 style="text-align:center; font-size:3em;">Piscine Web</h1>
     <center>
-        <a href="https://www.instagram.com/_maethawat_/" target="_blank">
+        <a href=" https://www.youtube.com/watch?v=INscMGmhmX4" target="_blank">
           <img src="Mickey.jpg" alt="Mickey" width="400" height="600">
         </a>
 
-        <a href="https://www.it.kmitl.ac.th/en" target="_blank">
+        <a href=" https://www.youtube.com/watch?v=INscMGmhmX4" target="_blank">
           <img src="1755841207059.jpg" alt="IT" width="400" height="600">
         </a>
     </center>
